examples/test/testpolicy12638.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12638
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key14: value11
      key46: value34
      key10: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value30
      podSelector:
        matchLabels:
          key43: value15
          key47: value4
          key42: value49
